avance de contenidos y presentaciones

--- a/src/gustos/gustos.html
+++ b/src/gustos/gustos.html
@@ -4,26 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi página personal - Mis gustos</title>
+    <link rel="stylesheet" href="../css/estilos.css">
+    <script src="../scripts/funciones.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="contenedor gustos">
         <header>
             <div>
-                <h1>Mi página personal</h1>
-                <h2>Ernesto Montellano L.</h2>
+                <h1>Ernesto Montellano L.</h1>
+                <h2>Mi página personal</h2>
             </div>
             <nav>
                 <ul>
-                    <li><a href="../">Volver atrás</a></li>
+                    <li><a href="../">Retornar</a></li>
                 </ul>
             </nav>    
         </header>
     <main>
-        <h2>Conoce mis gustos:</h2>
+        <p class="variable">Tan poco tiempo, tantas cosas por vivir, encontrar, experimentar, escuchar absorber.</p>
         <nav>
             <ul>
-                <li><a href="gustos_musicales/gustos_musicales.html">Mis gustos musicales</a></li>
-                <li><a href="gustos_culturales/gustos_culturales.html">Mis gustos culturales</a></li>
+                <li><a href="gustos_musicales/gustos_musicales.html">Música</a></li>
+                <li><a href="gustos_culturales/gustos_culturales.html">Ideas</a></li>
             </ul>
         </nav>
     </main>
