--- a/src/gustos/gustos_musicales/gustos_musicales.html
+++ b/src/gustos/gustos_musicales/gustos_musicales.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi sitio web personal - Mis gustos musicales</title>
+    <link rel="stylesheet" href="../../css/estilos.css">
+    <script src="../../scripts/funciones.js"></script>
 </head>
 <body>
     <body>
@@ -24,26 +26,24 @@
                 <h2>
                     Gustos musicales
                 </h2>
-                <p>
-                    Acá encontrarás algunas de mis bandas favoritas.
-                </p>
+                <p class="variable">Acá encontrarás algunas de mis bandas favoritas.</p>
                 
-                <ul>
+                <ul class="bandas">
                     <li>
                         <h3>Opeth</h3>
-                        <img src="" alt="">
+                        <img src="../../images/opeth.jpeg" alt="">
                         <p>Opeth es una banda sueca de metal progresivo conocida por su habilidad para fusionar elementos del death metal con influencias del rock progresivo, creando un sonido único y atmosférico. Fundada en 1990 por el vocalista y guitarrista Mikael Åkerfeldt, la banda ha evolucionado a lo largo de los años, pasando de un estilo más agresivo en sus primeros discos a composiciones más melódicas y complejas en trabajos posteriores. Opeth es admirada por su destreza técnica, cambios dinámicos en sus canciones, y letras introspectivas que exploran temas oscuros y filosóficos.</p>
                         <p><a href="https://www.opeth.com/" target="_blank">Sitio web de Opeth</a></p>
                     </li>
                     <li>
                         <h3>Amorphis</h3>
-                        <img src="" alt="">
+                        <img src="../../images/amorphis.jpg" alt="">
                         <p>Amorphis es una banda finlandesa de metal conocida por su versatilidad y capacidad para mezclar diferentes géneros, como el death metal, el folk, el rock progresivo, y elementos de la música tradicional finlandesa. Formada en 1990, Amorphis ha experimentado una notable evolución musical, pasando de sus raíces en el death metal a un sonido más melódico y atmosférico. La banda es reconocida por sus letras inspiradas en la epopeya finlandesa "Kalevala", su habilidad para crear paisajes sonoros envolventes y su enfoque en la mitología y la naturaleza.</p></p>
                         <p><a href="https://www.amorphis.net/" target="_blank">Sitio web de Amorphis</a></p>
                     </li> 
                     <li>
                         <h3>Tiamat</h3>
-                        <img src="" alt="">
+                        <img src="../../images/tiamat.webp" alt="">
                         <p>Tiamat es una banda sueca de metal gótico y doom metal, conocida por su enfoque atmosférico y melancólico que ha evolucionado significativamente desde sus inicios. Fundada a finales de los años 80 por Johan Edlund, Tiamat comenzó como una banda de death metal, pero pronto integró elementos de rock gótico, música ambiental y metal progresivo en su sonido. Sus letras suelen explorar temas oscuros, introspectivos y espirituales, mientras que su música se caracteriza por su densidad emocional y su capacidad para crear atmósferas profundas y evocadoras. Tiamat es admirada por su innovación y su contribución al desarrollo del metal gótico.</p>
                         <p><a href="https://www.facebook.com/tiamat/" target="_blank">Sitio web de Tiamat</a></p>
                     </li>
